--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="home.html">Home<span class="sr-only">(current)</span></a></li>
+            <li><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
             <li><a href="learn.html">Learn</a></li>
             <li><a href="change.html">Make A Change</a></li>
             <li><a href="about.html">About Us</a></li>
