--- a/index.html
+++ b/index.html
@@ -50,15 +50,18 @@
         </div>
       </div>
     </nav>
-    <div class = "container">
-      <div class = "row">
-        
+
+      <div class = "container">
+        <div class = "row">
+          <div class = "col-lg-14">
           <div class="jumbotron">
-            <h1>Jumbotron</h1>
-            <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-            <p><a class="btn btn-primary btn-lg">Learn more</a></p>
+            <h1 align = "center">The California Drought</h1>
+            <p align = "center">As of January 2015, California entered the fourth year of a record-breaking drought creating an extremely parched landscape.</p>
+            <p align = "center"><a class="btn btn-primary btn-lg"href="learn.html">Learn more</a></p>
           </div>
-         </div>
-    </div>
+        </div>
+      </div>
+      </div>
+ 
+
     </body>
-    
